# quant_strategies

./: .gitignore  20260216_1.ipynb  20260222_1.ipynb  20260222_2.ipynb  20260222_3.ipynb  arbitrage.py  bollinger_pair_trading.py  main.py  pyproject.toml  quant-strategies.service
