[project]
name = "quant-strategies"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "ccxt>=4.5.38",
    "jupyterlab>=4.5.4",
    "matplotlib>=3.10.8",
    "optuna>=4.7.0",
    "pandas>=3.0.0",
    "requests>=2.32.5",
    "statsmodels>=0.14.6",
    "ta>=0.11.0",
]
